cleaned up DeduperR so that it will run when main is called

--- a/props/superD.properties
+++ b/props/superD.properties
@@ -1,4 +1,4 @@
-#Mon Mar 04 00:12:29 PST 2013
+#Sun Apr 06 20:48:29 PST 2013
 ##############################
 ##############################
 #          BEGIN             #
@@ -40,7 +40,7 @@ HASH_ALGO=SHA-512
 # or
 # C:\\
 ##############################
-ROOT=C:\\users\jason\Desktop
+ROOT=C:\\Users\\Jason\\Desktop
 ##############################
 #            END             #
 #   Database Configuration   #
