updated database path and fixed creating new database

--- a/props/superD.properties
+++ b/props/superD.properties
@@ -16,7 +16,7 @@ superD_VERSION=0.1.0
 # dbURL=C:\\path\\to\\db\\file
 #
 ##############################
-H2_dbURL=C:\\Users\\Jason\\Desktop\\superD
+H2_dbURL=db\\superD
 H2_dbUser=test
 H2_dbPass=test
 ##############################
@@ -40,7 +40,7 @@ HASH_ALGO=SHA-512
 # or
 # C:\\
 ##############################
-ROOT=C:\\Users\\Jason\\Desktop
+ROOT=C:\\Documents and Settings\\jason.s\\Desktop
 ##############################
 #            END             #
 #   Database Configuration   #
