roughly working with some hard coded values and other commented out stuff. hashes and stores hash and path into database under db/

--- a/props/superD.properties
+++ b/props/superD.properties
@@ -40,7 +40,7 @@ HASH_ALGO=SHA-512
 # or
 # C:\\
 ##############################
-ROOT=C:\\Documents and Settings\\jason.s\\Desktop
+ROOT=C:\\Users\\Jason\\Desktop
 ##############################
 #            END             #
 #   Database Configuration   #
