adding multiple directory support

--- a/props/superD.properties
+++ b/props/superD.properties
@@ -40,7 +40,7 @@ HASH_ALGO=SHA-512
 # or
 # C:\\
 ##############################
-ROOT=C:\\Users\\Jason\\Desktop
+ROOT=C:\\TESTDATA||C:\\TESTDATA1
 ##############################
 #            END             #
 #   Database Configuration   #
