--- a/props/log4j.properties
+++ b/props/log4j.properties
@@ -1,5 +1,5 @@
 # Log levels
-# Uncomment the following line to enable full loggin for every class
+# set rootLogger= to trace, debug, fatal, error, warn, info
 log4j.rootLogger=trace, stdout, R
 log4j.logger.gr.xfrag=trace, stdout, R
 
@@ -13,9 +13,9 @@ log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
 log4j.appender.R=org.apache.log4j.RollingFileAppender
 # Path and file name to store the log file.
 log4j.appender.R.File=./logs/superD.log
-log4j.appender.R.MaxFileSize=1MB
+log4j.appender.R.MaxFileSize=10MB
 # Keep one backup file
-log4j.appender.R.MaxBackupIndex=5
+log4j.appender.R.MaxBackupIndex=3
 # Rolling File Appender layout
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%d - %c - (%F:%L) - %p - %m%n
