added multiple directory support

--- a/props/superD.properties
+++ b/props/superD.properties
@@ -40,7 +40,8 @@ HASH_ALGO=SHA-512
 # or
 # C:\\
 ##############################
-ROOT=C:\\TESTDATA||C:\\TESTDATA1
+ROOT=C:\\TESTDATA;;C:\\TESTDATA1;;C:\\TESTDATA2
+ROOT_DIL=;;
 ##############################
 #            END             #
 #   Database Configuration   #
