--- a/props/superD.properties
+++ b/props/superD.properties
@@ -30,6 +30,14 @@ H2_dbPass=test
 ##############################
 HASH_ALGO=SHA-512
 ##############################
+# ROOT_DIL may be one ore more character(s). 
+#    It represents the delimiter separating
+#    multiple root directories in ROOT.
+#    Ex: ROOT_DIL=;;
+#        ROOT=/dir1;;/dir2;;/dir3;;/dir4
+##############################
+ROOT_DIL=;;
+##############################
 # Specify ROOT directory
 # 
 # Linux and Mac:
@@ -41,7 +49,6 @@ HASH_ALGO=SHA-512
 # C:\\
 ##############################
 ROOT=C:\\TESTDATA;;C:\\TESTDATA1;;C:\\TESTDATA2
-ROOT_DIL=;;
 ##############################
 #            END             #
 #   Database Configuration   #
