updated database credentials to real ones

--- a/props/superD.properties
+++ b/props/superD.properties
@@ -1,4 +1,4 @@
-#Sun Apr 06 20:48:29 PST 2013
+#Sat Apr 28 00:32:29 PST 2013
 ##############################
 ##############################
 #          BEGIN             #
@@ -17,8 +17,8 @@ superD_VERSION=0.1.0
 #
 ##############################
 H2_dbURL=db\\superD
-H2_dbUser=test
-H2_dbPass=test
+H2_dbUser=superD
+H2_dbPass=3xtr3m3
 ##############################
 # If left blank, must be
 # passed in from cmd line
