updated properties file

--- a/props/superD.properties
+++ b/props/superD.properties
@@ -33,6 +33,8 @@ HASH_ALGO=SHA-512
 # ROOT_DIL may be one ore more character(s). 
 #    It represents the delimiter separating
 #    multiple root directories in ROOT.
+# NOTE: Use a delimiter pattern that won't
+#       be found in the file path
 #    Ex: ROOT_DIL=;;
 #        ROOT=/dir1;;/dir2;;/dir3;;/dir4
 ##############################
@@ -48,7 +50,7 @@ ROOT_DIL=;;
 # or
 # C:\\
 ##############################
-ROOT=C:\\TESTDATA;;C:\\TESTDATA1;;C:\\TESTDATA2
+ROOT=C:\\TESTDATA1;;C:\\TESTDATA2;;C:\\TESTDATA3
 ##############################
 #            END             #
 #   Database Configuration   #
