adjusted naming in props file

--- a/props/superD.properties
+++ b/props/superD.properties
@@ -2,7 +2,7 @@
 ##############################
 ##############################
 #          BEGIN             #
-#   Database Configuration   #
+#    superD Configuration    #
 ##############################
 superD_VERSION=0.1.0
 ##############################
@@ -53,6 +53,6 @@ ROOT_DIL=;;
 ROOT=C:\\TESTDATA1;;C:\\TESTDATA2;;C:\\TESTDATA3
 ##############################
 #            END             #
-#   Database Configuration   #
+#    superD Configuration    #
 ##############################
 ##############################
