added support for file sizes, also update props file

--- a/props/superD.properties
+++ b/props/superD.properties
@@ -1,24 +1,10 @@
-#Sat Apr 28 00:32:29 PST 2013
+#Sat Apr 28 22:45:29 PST 2013
 ##############################
 ##############################
 #          BEGIN             #
 #    superD Configuration    #
 ##############################
 superD_VERSION=0.1.0
-##############################
-#
-# dbURL format:
-# 
-# Linux and Mac:
-# dbURL=/path/to/db/file
-#
-# Windows:
-# dbURL=C:\\path\\to\\db\\file
-#
-##############################
-H2_dbURL=db\\superD
-H2_dbUser=superD
-H2_dbPass=3xtr3m3
 ##############################
 # If left blank, must be
 # passed in from cmd line
@@ -50,7 +36,23 @@ ROOT_DIL=;;
 # or
 # C:\\
 ##############################
-ROOT=C:\\TESTDATA1;;C:\\TESTDATA2;;C:\\TESTDATA3
+ROOT=
+##############################
+#
+# Generally leave the db config alone.
+#
+# dbURL format:
+# 
+# Linux and Mac:
+# dbURL=/path/to/db/file
+#
+# Windows:
+# dbURL=C:\\path\\to\\db\\file
+#
+##############################
+H2_dbURL=db\\superD
+H2_dbUser=superD
+H2_dbPass=3xtr3m3
 ##############################
 #            END             #
 #    superD Configuration    #
