--- a/build.xml
+++ b/build.xml
@@ -20,7 +20,7 @@
     <path id="superD.classpath">
         <pathelement location="bin"/>
         <pathelement location="lib/h2-1.3.170.jar"/>
-    	<pathelement location="lib/JUtils-2013-04-27.jar"/>
+    	<pathelement location="lib/JUtils.jar"/>
         <pathelement location="lib/log4j-1.2.17.jar"/>
     </path>
     <target name="init">
