added benchmarking ability

--- a/props/superD.properties
+++ b/props/superD.properties
@@ -1,7 +1,7 @@
 #Mon Apr 29 21:57:55 PDT 2013
 H2_dbPass=3xtr3m3
 HASH_ALGO=SHA-512
-ROOT=C\:/TESTDATA;;C\:/TESTDATA1;;C\:/TESTDATA2
+ROOT=C\:/TESTDATA1;;C\:/TESTDATA2
 H2_dbUser=superD
 H2_dbURL=db\\superD
 superD_VERSION=0.1.0
