added TODO tags, comments, code cleanup, marked some issues, overall boring management stuff

--- a/props/superD.properties
+++ b/props/superD.properties
@@ -1,8 +1,60 @@
-#Fri May 03 12:06:10 PDT 2013
-H2_dbPass=3xtr3m3
-HASH_ALGO=SHA-512
-ROOT=D\:/
-H2_dbUser=superD
-H2_dbURL=db\\superD
+#Sat Apr 28 22:45:29 PST 2013
+##############################
+##############################
+#          BEGIN             #
+#    superD Configuration    #
+##############################
 superD_VERSION=0.1.0
+##############################
+# If left blank, must be
+# passed in from cmd line
+# flag such as -SHA-256
+##############################
+# Options:
+# MD2, MD5, SHA-1, SHA-256
+# SHA-384, SHA-512
+##############################
+HASH_ALGO=SHA-512
+##############################
+# ROOT_DIL may be one ore more character(s). 
+#    It represents the delimiter separating
+#    multiple root directories in ROOT.
+# NOTE: Use a delimiter pattern that won't
+#       be found in the file path
+#    Ex: ROOT_DIL=;;
+#        ROOT=/dir1;;/dir2;;/dir3;;/dir4
+##############################
 ROOT_DIL=;;
+##############################
+# Specify ROOT directory
+# 
+# Linux and Mac:
+# /path/to/directory/or/mount/point
+#
+# Windows:
+# C:\\path\\to\\directory
+# or
+# C:\\
+##############################
+ROOT=
+##############################
+#
+# Generally leave the db config alone.
+#
+# dbURL format:
+# 
+# Linux and Mac:
+# dbURL=/path/to/db/file
+#
+# Windows:
+# dbURL=C:\\path\\to\\db\\file
+#
+##############################
+H2_dbURL=db\\superD
+H2_dbUser=superD
+H2_dbPass=3xtr3m3
+##############################
+#            END             #
+#    superD Configuration    #
+##############################
+##############################
