made Walker completely unstatic

--- a/props/superD.properties
+++ b/props/superD.properties
@@ -22,7 +22,7 @@ HASH_ALGO=SHA-512
 # NOTE: Use a delimiter pattern that won't
 #       be found in the file path
 #    Ex: ROOT_DIL=;;
-#        ROOT=/dir1;;/dir2;;/dir3;;/dir4
+#        ROOT=C:/Users/980x/Documents/dir1;;/dir2;;/dir3;;/dir4
 ##############################
 ROOT_DIL=;;
 ##############################
@@ -36,7 +36,7 @@ ROOT_DIL=;;
 # or
 # C:\\
 ##############################
-ROOT=
+ROOT=C:/Users/980x/Documents
 ##############################
 #
 # Generally leave the db config alone.
