--- a/props/superD.properties
+++ b/props/superD.properties
@@ -36,7 +36,7 @@ ROOT_DIL=;;
 # or
 # C:\\
 ##############################
-ROOT=C:\\Users\\Trace\\Documents\\TEST DUPES
+ROOT=/users/tracehagan/Documents/DUPES
 ##############################
 #
 # Generally leave the db config alone.
